--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "dependencies": {
     "@nuxtjs/i18n": "7.3.0",
     "core-js": "3.25.3",
+    "element-ui": "^2.15.13",
     "nuxt": "2.15.8",
     "nuxt-breakpoints": "1.1.9",
     "v-click-outside": "3.2.0",
+    "vue-debounce": "^4.0.0",
     "vue": "2.7.10",
     "vue-scroll-reveal": "1.0.11",
     "vue-server-renderer": "2.7.10",
